<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.mcmcg.gbs.bluefin</groupId>
	<artifactId>bluefin-web-portal-services</artifactId>
	<version>${artifact.version}</version>
	<packaging>war</packaging>

	<name>bluefin-web-portal-services</name>
	<description>Bluefin web portal Rest API Service</description>

	<parent>
		<groupId>com.mcmcg.alm</groupId>
		<artifactId>websuperpom</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<repositories>
    	<repository>
      		<id>maven-central</id>
      		<name>maven central cglib</name>
      		<url>https://repo1.maven.org/maven2/</url>
    	</repository>
  	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>12</java.version>
		<io.springfox.version>2.9.2</io.springfox.version>
		<querydsl.version>3.7.2</querydsl.version>
		<org.powermock.version>1.6.2</org.powermock.version>
		<!-- <endpoint.email.wsdl.base.url>http://phxiowasq34.internal.mcmcg.com</endpoint.email.wsdl.base.url> -->
		<endpoint.email.wsdl.base.url>http://emailservice.internal.mcmcg.com</endpoint.email.wsdl.base.url>
		<endpoint.email.wsdl.uri>${endpoint.email.wsdl.base.url}/MailManagerEJBHttpRouter/services/EmailRequestor</endpoint.email.wsdl.uri>
		<springdata.commons>1.11.4.RELEASE</springdata.commons>
		<!-- <sonar.host.url>http://localhost:9000/</sonar.host.url> -->
	</properties>

	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!-- Remove the two JPA dependencies for ORM refactoring -->
		<!-- <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency> -->
		<!-- <dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
		</dependency> -->
		<!-- Added below one for Page, PageRequest classes of data package-->
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-commons</artifactId>
		</dependency>
		
		<!-- JDBCTemplate -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<!-- Joda Time -->
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
		</dependency>
		<!-- <dependency>
			<groupId>org.jadira.usertype</groupId>
			<artifactId>usertype.core</artifactId>
			<version>4.0.0.GA</version>
		</dependency> -->

		<!-- Jackson json data bind -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
		</dependency>

		<!-- Security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- Dependency for MySql Java connector -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Dependency for MS SQL Server Java connector -->
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>sqljdbc</artifactId>
			<version>4</version>
		</dependency>

		<!-- Apache commons CSV -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.3</version>
		</dependency>


		<!-- Provided -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Query DSL -->
	<!-- 	<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-core</artifactId>
			<version>${querydsl.version}</version>
		</dependency> -->
		<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-apt</artifactId>
			<version>${querydsl.version}</version>
		</dependency>
	<!-- 	<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-jpa</artifactId>
			<version>${querydsl.version}</version>
		</dependency> -->

		<!-- Swagger 2 -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${io.springfox.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${io.springfox.version}</version>
		</dependency>

		<!-- Utils -->
		<!-- <dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.16.8</version>
		</dependency> -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.4</version>
		</dependency>


		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.8.13</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>${org.powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${org.powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
    		<groupId>org.javassist</groupId>
    		<artifactId>javassist</artifactId>
    		<version>3.23.1-GA</version>
		</dependency>
		<dependency>
    		<groupId>cglib</groupId>
    		<artifactId>cglib-nodep</artifactId>
    		<version>3.2.12</version>
		</dependency>
		<dependency>
    		<groupId>javax.annotation</groupId>
    		<artifactId>javax.annotation-api</artifactId>
		</dependency>
		<dependency>
    		<groupId>javax.xml.bind</groupId>
    		<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.glassfish.jaxb</groupId>
    		<artifactId>jaxb-runtime</artifactId>
    		<version>2.3.2</version>
		</dependency>
		
		<dependency>
    		<groupId>com.sun.xml.bind</groupId>
    		<artifactId>jaxb-core</artifactId>
    		<version>2.2.11</version>
		</dependency>
		<dependency>
    		<groupId>javax.activation</groupId>
    		<artifactId>activation</artifactId>
    		<version>1.1.1</version>
		</dependency>
		<dependency>
    		<groupId>javax.xml.ws</groupId>
    		<artifactId>jaxws-api</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.surefire/surefire-testng -->
		<dependency>
    		<groupId>org.apache.maven.surefire</groupId>
    		<artifactId>surefire-testng</artifactId>
    		<version>2.22.0</version>
		</dependency>
		
	</dependencies>

	<!-- Required because we have two parent poms -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.1.5.RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
	 
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>application*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<!-- compile for Java 1.8 -->
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-codegen-plugin</artifactId>
				<version>3.1.5</version>
				<executions>
					<!-- <execution>
						<id>generate-sources</id>
						<phase>generate-sources</phase>
						<configuration>
							<sourceRoot>${project.build.directory}/generated-sources</sourceRoot>
							<wsdlOptions>
								<wsdlOption>
									<wsdl>${endpoint.email.wsdl.uri}?wsdl</wsdl>
								</wsdlOption>
							</wsdlOptions>
						</configuration>
						<goals>
							<goal>wsdl2java</goal>
						</goals>
					</execution> -->
				</executions>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>2.1.13</version>
				<!-- Ensure that the revision goal is invoked during the initialize phase. -->
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- Configure the location of the .git directory. -->
					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mysema.maven</groupId>
				<artifactId>apt-maven-plugin</artifactId>
				<version>1.1.3</version>
				<executions>
					<execution>
						<goals>
							<goal>process</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
							<showWarnings>true</showWarnings>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
    			<groupId>org.codehaus.mojo</groupId>
    			<artifactId>versions-maven-plugin</artifactId>
    			<version>2.5</version>
    			<configuration>
        			<generateBackupPoms>false</generateBackupPoms>
    			</configuration>
			</plugin>
			<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-surefire-plugin</artifactId>
    			<version>2.22.1</version>
    			<configuration>
    				<skipTests>true</skipTests>
        			<argLine>
            			--illegal-access=permit
        			</argLine>
    			</configuration>
			</plugin>
			<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-failsafe-plugin</artifactId>
    			<version>2.22.0</version>
    			<configuration>
        			<argLine>
            			--illegal-access=permit
        			</argLine>
    			</configuration>
			</plugin>
			
		</plugins>
		<finalName>bluefin-wp-services</finalName>
	</build>
</project>
